Fix navbar vertical align. Add Frontpage

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,7 +1,7 @@
 @media (prefers-reduced-motion: no-preference) {
-    .klaus {
+    /* .klaus {
       animation: klaus-spin infinite 20s linear;
-    }
+    } */
   }
   
   @keyframes klaus-spin {
